# sRemoPyPI

./: .gitignore  README.md  __init__.py  __version__.py  api.py  example.ipynb  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: question.md
.github/PULL_REQUEST_TEMPLETE/: master.md
.github/workflows/: python-publish.yml
sRemo/: __init__.py  __version__.py  sRemoAPI.py
