[metadata]
name = sRemoAPI
version = 1.0.0
author = Taro Tanaka
author_email = zunda-pixel@gmail.com
description = Python client for sRemo API
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/zunda-pixel/sRemo
licence = file: LICENCE
python_requires = >=3.5
classifiers = 
  Development Status :: 2 - Pre-Alpha
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
